--- a/src/css/style.css
+++ b/src/css/style.css
@@ -130,14 +130,25 @@ body {
   .btn-container {
     margin-top: 20px;
     display: flex;
-    flex-direction: row;
-    gap: 10px;
+    flex-direction: column;
+    gap: 12.5px;
     align-items: center;
     width: 100%;
     justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .flex-1 {
+    flex: 1;
+  }
+
+  .fw {
+    width: 100%;
   }
   .btn-main {
     padding: 5px 10px 5px 15px;
+    justify-content: space-between;
+    white-space: nowrap;
     background: linear-gradient(
         180deg,
         rgba(73, 252, 195, 1),
@@ -177,6 +188,7 @@ body {
     }
   }
   .btn-sec {
+    justify-content: space-between;
     padding: 5px 10px 5px 15px;
     background: linear-gradient(
       180deg,
@@ -205,7 +217,12 @@ body {
     transition: 0.5s ease;
     opacity: 0.5;
   }
-
+  .twoBtn {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    width: 100%;
+  }
   .btn-link {
     width: 100%;
     background: rgba(0, 0, 0, 0.05);
